// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text font family 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  color: #1e272e;
  font-size: md;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c1 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-family: sans-serif;
  color: #1e272e;
  font-size: md;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c2 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-family: serif;
  color: #1e272e;
  font-size: md;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

<div>
  <span
    className="c0"
    color="black"
    fontFamily="primary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c0"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c1"
    color="black"
    fontFamily="sans-serif"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c2"
    color="black"
    fontFamily="serif"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
</div>
`;

exports[`Text font size 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-size: 0.833rem;
  color: #1e272e;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c1 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-size: 1rem;
  color: #1e272e;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c2 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-size: 1.2em;
  color: #1e272e;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c3 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-size: 1.44em;
  color: #1e272e;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c4 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-size: 1.728em;
  color: #1e272e;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c5 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-size: 2.074em;
  color: #1e272e;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c6 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-size: 2.488em;
  color: #1e272e;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c7 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-size: 50px;
  color: #1e272e;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c8 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-size: 60px;
  color: #1e272e;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

<div>
  <span
    className="c0"
    color="black"
    fontFamily="secondary"
    fontSize={0}
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c1"
    color="black"
    fontFamily="secondary"
    fontSize={1}
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c2"
    color="black"
    fontFamily="secondary"
    fontSize={2}
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c3"
    color="black"
    fontFamily="secondary"
    fontSize={3}
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c4"
    color="black"
    fontFamily="secondary"
    fontSize={4}
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c5"
    color="black"
    fontFamily="secondary"
    fontSize={5}
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c6"
    color="black"
    fontFamily="secondary"
    fontSize={6}
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c7"
    color="black"
    fontFamily="secondary"
    fontSize={50}
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c8"
    color="black"
    fontFamily="secondary"
    fontSize="60px"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
</div>
`;

exports[`Text font style 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-style: normal;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c1 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-style: italic;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c2 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-style: oblique;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

<div>
  <span
    className="c0"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c1"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="italic"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c2"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="oblique"
    fontWeight={400}
    textDecoration="none"
  />
</div>
`;

exports[`Text font weight 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-weight: 300;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c1 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-weight: 400;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c2 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-weight: 500;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c3 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-weight: 600;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c4 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-weight: 700;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

<div>
  <span
    className="c0"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight="light"
    textDecoration="none"
  />
  <span
    className="c1"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight="normal"
    textDecoration="none"
  />
  <span
    className="c2"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight="medium"
    textDecoration="none"
  />
  <span
    className="c3"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight="semi-bold"
    textDecoration="none"
  />
  <span
    className="c4"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight="bold"
    textDecoration="none"
  />
  <span
    className="c2"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={500}
    textDecoration="none"
  />
</div>
`;

exports[`Text with decoration 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -webkit-text-decoration: overline;
  text-decoration: overline;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  line-height: 1.5;
}

.c1 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  line-height: 1.5;
}

.c2 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  line-height: 1.5;
}

.c3 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -webkit-text-decoration: underline overline;
  text-decoration: underline overline;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  line-height: 1.5;
}

<div>
  <span
    className="c0"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="overline"
  />
  <span
    className="c1"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="line-through"
  />
  <span
    className="c2"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="underline"
  />
  <span
    className="c3"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="underline overline"
  />
</div>
`;

exports[`Text with decoration 2`] = `
.c0 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c1 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  color: #ffffff;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c2 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  color: #f1f2f6;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c3 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  color: #ffdd59;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c4 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  color: #0fbcf9;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c5 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  color: #ff3f34;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c6 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  color: #05c46b;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c7 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  color: #ffa801;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c8 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  color: #001122;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c9 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  color: cyan;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

<div>
  <span
    className="c0"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c1"
    color="white"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c2"
    color="light"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c3"
    color="primary"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c4"
    color="info"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c5"
    color="danger"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c6"
    color="success"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c7"
    color="warning"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c8"
    color="#001122"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c9"
    color="cyan"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
</div>
`;

exports[`Text with transform 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  text-transform: capitalize;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c1 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c2 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  text-transform: lowercase;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

.c3 {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  text-transform: full-width;
  color: #1e272e;
  font-size: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
}

<div>
  <span
    className="c0"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c1"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c2"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
  <span
    className="c3"
    color="black"
    fontFamily="secondary"
    fontSize="md"
    fontStyle="normal"
    fontWeight={400}
    textDecoration="none"
  />
</div>
`;
